--- a/vitrina_react/src/App.css
+++ b/vitrina_react/src/App.css
@@ -1,7 +1,14 @@
-.app{
-    width: 600px;
+.App{
+    width: 800px;
     height: 500px;
     background-color: yellowgreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+body{
     display: flex;
     justify-content: center;
     align-items: center;
